--- a/scss/layout/_titles.scss
+++ b/scss/layout/_titles.scss
@@ -1,4 +1,7 @@
 // TITULOS
+.divider{
+    height: 90px;
+}
 
 .title {
     padding-top: 30px;
@@ -28,4 +31,9 @@
         text-align: center;
     }
 }
+  @media (max-width: 767px) {
+    .divider{
+        height: 20px;
+    } 
+  }
 
